# love_touches

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  cron.py  development.txt  env-setup.py  forms.py  main.py  manage.py  models.py  pyproject.toml  requirements.txt  self-check.py  tasks.py  utils.py  uwsgi_test.sh  views.py  worker.py  wsgi.py
static/css/: grayscale.css  montserrat.css  simple-sidebar.css  yanone_kaffeesatz.css
static/select2/: select2-bootstrap.css  select2-form.js
templates/: about.html  actions.html  admin_base.html  base.html  confirm.html  confirm_mobile.html  contact.html  index.html  privacy.html  profile.html  schedule.html  security_base.html  signup_base.html  step_one.html  step_three.html  step_two.html  verify_phone.html
templates/admin/: actions.html  base.html  change_password.html  contact.html  feedback_list.html  feedback_reply.html  schedule.html  suggest_action.html  suggest_method.html
templates/errors/: 404.html  405.html  500.html
templates/manage/: actions.html  base.html  change_password.html  contact.html  feedback.html  schedule.html  suggest_action.html  suggest_method.html  two_factor.html
templates/security/: _menu.html  change_password.html  forgot_password.html  login_user.html  register_user.html  reset_password.html  send_confirmation.html  two_factor.html
templates/signup/: confirm.html  step_one.html  step_three.html  step_two.html
templates/snippets/: actions.html  contact_form.html  methods_dialog.html
views/: __init__.py  admin.py  manage.py  security.py  signup.py
(+7 files in other folders)
