[tool.poetry]
name = "love_touches"
version = "1.0.0"
description = "A tool to help you keep your relationship vibrant."
authors = ["Lewis Franklin <lewis.franklin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
celery = "^4.2"
Flask = "^1.0"
Flask-Admin = "^1.5"
Flask-Bootstrap = "^3.3"
Flask-Login = "^0.4.1"
Flask-Mail = "^0.9.1"
Flask-Migrate = "^2.3"
Flask-Script = "^2.0"
Flask-Security = "^3.0"
Flask-SQLAlchemy = "^2.3"
phonenumbers = "^8.10"
pytz = "^2018.7"
raven = "^6.10"
sqlalchemy = "^1.3"
pyotp = "^2.2"
uWSGI = "^2.0"
werkzeug = "^0.15.3"
wtforms = "^2.2"
bcrypt = "^3.1"
twilio = "^6.22"

[tool.poetry.dev-dependencies]
flake8 = "^3.6"
flake8-builtins = "^1.4"
flake8-comprehensions = "^1.4"
flake8-docstrings = "^1.3"
flake8-tuple = "^0.2.13"
flake8-quotes = "^1.0"
Flask-DebugToolbar = "^0.10.1"
pep8-naming = "^0.7.0"
black = "=18.6b4"
pytest = "^4.0"
pre-commit = "^1.12"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
